<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6044D85"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right"
    tools:context=".User_Registration_Screen">

    <EditText
        android:id="@+id/et_reg_user_name"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_user_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_last_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_first_name"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_first_name"

        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/et_reg_last_name"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_last_name2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_first_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_street_address"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_street_address"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_user_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_date_of_birth"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_date_of_birth"
        android:inputType="date|datetime"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_phone"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_zip_code"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_city"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_city"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_reg_state"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/et_reg_street_address"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_state"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_state"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_reg_city"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_street_address"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_phone"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_phone"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_email"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_date_of_birth"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_zip_code"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_zip_code"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_reg_territory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_city"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_territory"
        android:layout_width="93dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:ems="10"
        android:hint="@string/et_reg_territory"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_reg_zip_code"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_state"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/sw_reg_has_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/sw_reg_has_vehicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_reg_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btn_reg_registration"
        android:text="@string/btn_reg_registration"
        app:backgroundTint="#BD551D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_profile_number"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/tv_reg_already_signed_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_reg_already_signed_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg_registration"
        app:layout_constraintVertical_bias="0.961" />

    <CheckBox
        android:id="@+id/cb_reg_active_profile"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/cb_reg_active_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_reg_has_vehicle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_reg_profile_number"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/ciera_blue_back_black_underline"
        android:hint="@string/tv_reg_profile_number"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_reg_active_profile"
        app:layout_constraintVertical_bias="0.024" />

</androidx.constraintlayout.widget.ConstraintLayout>