<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ciera_Blue"
    tools:context=".User_Profile_View">

    <EditText
        android:id="@+id/et_pi_view_user_name"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:inputType="text"
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_user_name"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_pi_view_date_of_birth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_last_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_first_name"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_pi_view_profile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_last_name"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_pi_view_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_first_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_garaging_address"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_garaging_address"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_pi_view_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_user_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_city"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_city"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_pi_view_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_garaging_address"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_state"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_state"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cb_pi_view_is_active"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_city"
        app:layout_constraintVertical_bias="0.001" />

    <EditText
        android:id="@+id/et_pi_view_zipcode"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_zipcode"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cb_pi_view_has_vehicle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_state"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_territory"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/white_back_black_underline"
        android:hint="@string/et_pi_view_territory"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_pi_view_has_vehicle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_date_of_birth"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/white_back_black_underline"
        android:ems="10"
        android:hint="@string/et_pi_view_date_of_birth"
        android:inputType="date"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_pi_view_user_name"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_phone"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/white_back_black_underline"
        android:ems="10"
        android:hint="@string/et_pi_view_phone"
        android:inputType="number|phone"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_pi_view_garaging_address"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_date_of_birth"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_email"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/white_back_black_underline"
        android:ems="10"
        android:hint="@string/et_pi_view_email2"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_pi_view_city"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_phone"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cb_pi_view_is_active"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cb_pi_view_is_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cb_pi_view_has_vehicle"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_email"
        app:layout_constraintVertical_bias="0.001" />

    <CheckBox
        android:id="@+id/cb_pi_view_has_vehicle"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cb_pi_view_has_vehicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_pi_view_zipcode"
        app:layout_constraintTop_toBottomOf="@+id/cb_pi_view_is_active"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_profile_number"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/white_back_black_underline"
        android:ems="10"
        android:hint="@string/et_pi_view_profile_number"
        android:inputType="number|text"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_pi_view_first_name"
        app:layout_constraintTop_toTopOf="@+id/et_pi_view_first_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pi_view_password"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/white_back_black_underline"
        android:ems="10"
        android:hint="@string/et_pi_view_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_pi_view_last_name"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_profile_number"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/lv_pi_view_user_profile_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pi_view_view_profile_list" />

    <Button
        android:id="@+id/btn_pi_view_view_profile_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_pi_view_view_profile_list"
        app:backgroundTint="@color/light_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pi_view_zipcode"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>